[package]
name = "docker-archive"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4"
flate2 = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
path-clean = "0.1.0"
xxhash-rust = { version = "0.8.4", features = ["xxh3"] }
which = "4.2.5"

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = ["v4", "fast-rng", "macro-diagnostics"]
