[package]
name = "docker-archive"
version = "0.0.3"
edition = "2021"
authors = ["sify21@163.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sify21/docker-archive"
description = """
A Rust library to insecpt a docker archive.
"""
categories = ["parser-implementations"]
keywords = ["docker", "docker-archive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4"
flate2 = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
path-clean = "0.1.0"
xxhash-rust = { version = "0.8.4", features = ["xxh3"] }
which = "4.2.5"
itertools = "0.10.3"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
